Fixed footer and moved css into style.css Changed background colour to the one on figma Dimensions not specified so I did 80 for columns 20 for logo/socials Aligned columns properly ul not aligned with h3 so I did align left Temp logo for Mac jobs Used the svgs from Mac website, not sure if thats ok

--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -1,3 +1,106 @@
-h1 {
-  color: red;
+.filterButtons * {
+  display: inline-flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  background-color: #490EF2;
+  border: white;
+  color: #BFBFBF;
+  font-family: "poppins";
+  font-size: 18px;
+  border-radius: 22px;
+  padding: 6px 16px;
+  margin-right: 8px;
+  margin-bottom: 10px;
+  width: 130px;
+}
+
+.disabled {
+  opacity: 0.6;
+}
+
+#jobType {
+  font-family: "poppins";
+  font-weight: normal;
+  padding-left: 20px;
+  margin-left: 8px;
+}
+
+#allJobTypes {
+  width: 145px;
+}
+
+.footer {
+  background-color:#F6F6F6;
+  color: #000000;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  text-align: center;
+  align-items: flex-start;
+  font-size: 12.5px;
+}
+
+.footer-column-container {
+  justify-content: flex-start;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 5% 0% 5% 5%;
+  width: 80%;
+}
+
+.footer-column {
+    flex-direction: column;
+    align-items: flex-start;
+    display: flex;
+    width: 25%;
+    box-sizing: border-box;
+    text-align: left;
+
+}
+
+.footer-column h3 {
+  font-family: "poppins";
+  font-size: 14px;
+  font-weight: bold;
+}
+
+.footer-column ul {
+  padding-left: 0;
+}
+.footer-column li {
+  font-family: "poppins";
+  font-size: 10px;
+  margin-bottom: 5px;
+  list-style-type: None;
+}
+
+.footer-socials {
+  width: 20%;
+  padding: 5% 5% 5% 0%;
+  
+}
+
+.footer-socials h3{
+  font-family: "poppins";
+  font-size: 14px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+.footer-socials-logo {
+  width: 100%;
+  height: auto;
+
+}
+
+.footer-socials-icons {
+  justify-content: flex-start;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+}
+
+.icon {
+  width: 25%;
+  padding: 5% 0 5% 0;
 }
